# codingame-great-escape

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  appveyor.yml  build.bat  build.sh  cpplint.py  input.txt  input_2.txt  input_3.txt
src/: Main.cpp
test/: input_2.txt
